# scrapper-inbox-outbox

./: README.md  pyproject.toml
app/crawlers/base/: client.py
app/crawlers/starwars_api/: __init__.py  get.py  process.py  start.py
app/infra/db/: __init__.py  tables.py
